Fixed footer position.Removed overflow-y: scroll;

--- a/style/style.scss
+++ b/style/style.scss
@@ -14,10 +14,15 @@ html {
   body {
     height: 100%;
 
-    overflow-y: scroll;
-
     #wrapper {
-      height: 100%;
+      min-height: 100%;
+      margin-bottom: -37px;
+      &:after {
+        content: "";
+        display: block;
+        height: 142px;
+      }
+      background-color: #00A000;
       .menu {
         margin: 0;
         background-color: black;
@@ -51,7 +56,7 @@ html {
       #currentPage {
         min-height: 90%;
         text-align: center;
-        background-color: #00A000;
+
 
         #welcome-header {
           color: gold;
@@ -204,9 +209,9 @@ html {
             color: gold;
             width: 90%;
           }
-            img {
-              width: 60%;
-            }
+          img {
+            width: 60%;
+          }
           button {
             color: gold;
             background-color: black;
@@ -316,14 +321,16 @@ html {
         }
       }
 
-      footer {
-        background-color: #880000;
-        color: gold;
-        border-top: solid white 3px;
 
-        padding: 7px;
-        text-align: center;
-      }
+    }
+    footer {
+      height: 20px;
+      background-color: #880000;
+      color: gold;
+      border-top: solid white 3px;
+
+      padding: 7px;
+      text-align: center;
     }
   }
 
